--- a/client/package.json
+++ b/client/package.json
@@ -10,21 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@hebilicious/vue-query-nuxt": "^0.3.0",
-    "@pinia/nuxt": "^0.9.0",
-    "@primevue/themes": "^4.2.4",
-    "@tanstack/vue-query": "^5.62.3",
+    "@nuxt/fonts": "^0.10.3",
     "nuxt": "^3.14.1592",
-    "pinia": "^2.3.0",
-    "primevue": "^4.2.4",
     "vue": "latest",
     "vue-router": "latest"
   },
-  "overrides": {
-    "vue": "latest"
-  },
   "devDependencies": {
-    "@primevue/nuxt-module": "^4.2.4",
-    "nuxt-primevue": "^3.0.0"
+    "@element-plus/nuxt": "^1.1.0",
+    "element-plus": "^2.9.1"
   }
 }
