--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "mongoose": "^8.9.1",
+    "openai": "^4.77.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
