creating quiz with token and not

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "#app": ["./.nuxt/types/app"],
       "@interfaces/*": ["interfaces/*"],
       "@stores/*": ["stores/*"],
       "@utils/*": ["utils/*"]
