--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,8 @@
   },
   "devDependencies": {
     "@element-plus/nuxt": "^1.1.0",
+    "@nuxt/schema": "^3.15.0",
+    "@nuxt/types": "^2.18.1",
     "element-plus": "^2.9.1",
     "sass": "^1.83.0"
   },
