--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -7,7 +7,8 @@
       "#app": ["./.nuxt/types/app"],
       "@interfaces/*": ["interfaces/*"],
       "@stores/*": ["stores/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@composables": ["composables/*"]
     }
   }
 }
