--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@pinia/nuxt": "^0.9.0",
     "@tanstack/vue-query": "^5.62.8",
     "axios": "^1.7.9",
+    "jose": "^5.9.6",
     "nuxt": "^3.14.1592",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
