--- a/api/package.json
+++ b/api/package.json
@@ -27,12 +27,14 @@
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.1.2",
     "@nestjs/swagger": "^8.1.0",
     "@nestjs/throttler": "^6.3.0",
     "argon2": "^0.41.1",
     "axios": "^1.7.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cron": "^3.3.2",
     "mongoose": "^8.9.1",
     "openai": "^4.77.0",
     "passport-jwt": "^4.0.1",
