--- a/api/.env.template
+++ b/api/.env.template
@@ -3,3 +3,7 @@ OPENAI_API_KEY=""
 JWT_SECRET=""
 JWT_EXPIRATION_TIME="1d"
 FREE_TOKENS=5
+EMAIL_HOST=
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
+ADMIN_EMAIL=quizdram@gmail.com
